--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
         padding: 0;
     }
   </style>
+  <link rel="stylesheet" href="./styles.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
